# ocpx

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
logs/: README.txt  events_large_demo.csv  objects_large_demo.csv  raw_df_large_demo.csv  relations_link_large_demo.csv  summary.json
notebooks/: 260308_sample_test.ipynb
src/ocpx/: __init__.py
src/ocpx/io/: __init__.py  ocel.py  ocel_loader.py
src/ocpx/ocel/: __init__.py  adapters.py  loader.py  models.py  validators.py
tests/: test_imports.py  test_ocel_loader.py  test_smoke.py
