[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ocpx"
version = "0.1.0"
description = "Academic library for object-centric process intelligence based on OCEL 2.0"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "mineworker-x29" }
]
dependencies = [
  "pm4py",
  "pandas",
  "numpy",
  "networkx",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "black",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = [
  "--import-mode=importlib",
]
testpaths = [
  "tests",
]
pythonpath = [
  "src",
]